# apitest_crew

./: .env.example  README.md  pyproject.toml  report.md
src/apitest_crew/: crew.py  main.py
src/apitest_crew/config/: agents.yaml  tasks.yaml
