[project]
name = "apitest_crew"
version = "0.1.0"
description = "APITEST_Crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
apitest_crew = "apitest_crew.main:run"
run_crew = "apitest_crew.main:run"
train = "apitest_crew.main:train"
replay = "apitest_crew.main:replay"
test = "apitest_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
